[project]
name = "gigshield_env"
version = "0.1.0"
description = "Gig worker RL environment for OpenEnv"
authors = [
    {name = "Swarit Singh"}
]

dependencies = [
    "pydantic",
    "openenv-core>=0.2.0"
]

[project.scripts]
server = "server.app:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"